updating syntax for padding and margin resets

--- a/index.html
+++ b/index.html
@@ -557,11 +557,11 @@
                         <div>
                             <img data-src="https://picsum.photos/255" alt="Wordpress Image" class="wp-image alignleft" id="section--wp-images">
                         </div>
-                        <h5 class="reset--bottom">Overview</h5>
+                        <h5 class="reset--margin--bottom">Overview</h5>
                         <p>The basic content area includes default styling for all usable elements within a WYSIWYG section. This area is especially useful for WordPress sites or other sites that require a CMS feature.</p>
-                        <h5 class="reset--bottom">Images</h5>
+                        <h5 class="reset--margin--bottom">Images</h5>
                         <p>To the left is a floated image specifically styled for WordPress' built-in image alignment classes (left, center and right).</p>
-                        <h5 class="reset--bottom">Ordered &amp; Unordered Lists</h5>
+                        <h5 class="reset--margin--bottom">Ordered &amp; Unordered Lists</h5>
                         <ul id="section--lists">
                             <li>The face of the moon was in shadow.</li>
                             <li>I watched the storm, so beautiful yet terrific.</li>
@@ -578,7 +578,7 @@
                             <img data-src="https://picsum.photos/400/250" alt="Wordpress Image" class="filter--gray">
                             <p class="wp-caption-text">Bond supports WordPress caption syntax right out of the box!</p>
                         </div>
-                        <h5 class="reset--bottom">Other Image Features</h5>
+                        <h5 class="reset--margin--bottom">Other Image Features</h5>
                         <p>There are also built-in styles for WordPress image captions as well (see right)! Additionally, you can apply a specific "filter--gray" class to convert your images to grayscale where necessary.</p>
                         <blockquote id="section--blockquotes">
                             Blockquotes are pre-styled with multiple options and variables for customization.
@@ -591,19 +591,19 @@
                         <h6>Heading 6</h6>
                         <br>
                         <!-- Broken Images -->
-                        <h5 class="reset--bottom" id="section--broken-images">Broken Images</h5>
+                        <h5 class="reset--margin--bottom" id="section--broken-images">Broken Images</h5>
                         <p>If the path to any image is broken or missing, Bond gracefully handles the fallback by informing your user that the image was not found, along with the title and URL.</p>
                         <img data-src="assets/img/rafting.jpg" alt="A Group of People White Water Rafting">
                         <br><br>
                         <!-- Responsive Embed -->
-                        <h5 class="reset--bottom" id="section--embeds">Responsive Embeds</h5>
+                        <h5 class="reset--margin--bottom" id="section--embeds">Responsive Embeds</h5>
                         <p>All forms of embeds are supported and are responsive out of the box. Whether you're using Vimeo, YouTube, Daily Motion or any other type of embed, the frame will automatically scale and maintain aspect ratio on any device.</p>
                         <div class="embed__container">
                             <iframe src="https://www.youtube.com/embed/l6nfTkoAmn8" frameborder="0" allowfullscreen></iframe>
                         </div>
                         <br><br><br>
                         <!-- Responsive Tables -->
-                        <h5 class="reset--bottom" id="section--tables">Responsive Tables</h5>
+                        <h5 class="reset--margin--bottom" id="section--tables">Responsive Tables</h5>
                         <p>All tables inserted into a WYSIWYG will automatically become responsive with Bond. At a certain device width the table becomes horizontally scrollable within a parent container to ensure mobile users are able to comfortably view it.</p>
                         <table>
                             <thead>
@@ -634,9 +634,9 @@
             </section>
 
             <!-- Social Sharing -->
-            <section class="page-section flush--top" id="section--sharing">
+            <section class="page-section reset--padding--top" id="section--sharing">
                 <div class="container--small">
-                    <h5 class="reset" id="section--tables">Page Sharing</h5>
+                    <h5 class="reset--margin" id="section--tables">Page Sharing</h5>
                     <p>Page sharing is made simple with Bond: click a button, get your sharing options! It's that easy. Social account icons are automatically color coded based on the target URL. All swatches are exact and on-brand.</p>
                     <a href="#" class="social-sharing__trigger button--basic">Share This Page</a>
                     <ul class="social-sharing__list social-icons no-bg">
@@ -722,7 +722,7 @@
             <!-- Google Map Embed -->
             <section class="map__wrapper" id="section--maps">
                 <div class="container--small">
-                    <h5 class="reset" id="section--tables">Map Embeds</h5>
+                    <h5 class="reset--margin" id="section--tables">Map Embeds</h5>
                     <p>Embed Google Map iframes quickly with Bond. Preset heights and style resets ensure a consistent experience cross-platform.</p>
                     <br>
                 </div>
@@ -732,7 +732,7 @@
             <!-- Alerts -->
             <section class="page-section" id="section--alerts">
                 <div class="container--small">
-                    <h5 class="reset" id="section--tables">Alerts</h5>
+                    <h5 class="reset--margin" id="section--tables">Alerts</h5>
                     <p>Four different styles of alert are available out of the box (danger, warning, success and neutral).</p>
                     <ul class="alert__list">
                         <!-- Alert: Danger -->
@@ -760,9 +760,9 @@
             </section>
 
             <!-- Pagination -->
-            <section class="page-section flush--top" id="section--pagination">
+            <section class="page-section reset--padding--top" id="section--pagination">
                 <div class="container--small">
-                    <h5 class="reset">Pagination</h5>
+                    <h5 class="reset--margin">Pagination</h5>
                     <p>Need pagination? No problem. Would you prefer the classic numbered style or a lazy load style? With Bond, either is achieveable within minutes.</p>
                     <br>
                     <!-- Pagination: Basic -->
@@ -801,9 +801,9 @@
             </section>
 
             <!-- Blocks -->
-            <section class="page-section flush--top" id="section--blocks">
+            <section class="page-section reset--padding--top" id="section--blocks">
                 <div class="container--small">
-                    <h5 class="reset">Blocks</h5>
+                    <h5 class="reset--margin">Blocks</h5>
                     <p>Bond's block layouts utilize the latest features of the CSS grid syntax. Easily create block grids with simple classes like 'three-up' or 'four-up'. Additionally, each block contains a stack of elements that suit news and blog grids perfectly such as excerpts, CTA's, tags, and more.</p>
                 </div>
                 <div class="container--xl">
@@ -862,9 +862,9 @@
             </section>
 
             <!-- Accordions -->
-            <section class="page-section flush--top" id="section--accordions">
+            <section class="page-section reset--padding--top" id="section--accordions">
                 <div class="container--small">
-                    <h5 class="reset">Accordions</h5>
+                    <h5 class="reset--margin">Accordions</h5>
                     <p>Rapidly create an FAQ section with Bond's built-in accordions!</p>
                     <ul class="accordions">
                         <li class="accordions__item">
@@ -896,9 +896,9 @@
             </section>
 
             <!-- Tabs -->
-            <section class="page-section flush--top" id="section--tabs">
+            <section class="page-section reset--padding--top" id="section--tabs">
                 <div class="container--small">
-                    <h5 class="reset">Tabs</h5>
+                    <h5 class="reset--margin">Tabs</h5>
                     <br>
                     <ul class="tabs--overlap">
                         <li class="tabs__tab-item">
@@ -922,9 +922,9 @@
             </section>
 
             <!-- Partners List -->
-            <section class="page-section flush--top" id="section--partners">
+            <section class="page-section reset--padding--top" id="section--partners">
                 <div class="container--small">
-                    <h5 class="reset">Partner Groups</h5>
+                    <h5 class="reset--margin">Partner Groups</h5>
                     <p>Many websites require a method to display sponsors, partners or supporters. With Bond, it's as easy as including the Partners Group component.</p>
                 </div>
                 <div class="container--medium">
@@ -960,9 +960,9 @@
             </section>
 
             <!-- Breadcrumbs -->
-            <section class="page-section flush--top" id="section--breadcrumbs">
+            <section class="page-section reset--padding--top" id="section--breadcrumbs">
                 <div class="container--small">
-                    <h5 class="reset">Breadcrumbs</h5>
+                    <h5 class="reset--margin">Breadcrumbs</h5>
                     <p>Show your users exactly where they are with breadcrumbs. With Bond, there's no need to add separate HTML elements for dividers; it's built right into the default styling.</p>
                     <ul class="breadcrumbs">
                         <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__item-link">Home</a></li>
@@ -974,18 +974,18 @@
             </section>
 
             <!-- Dialog Trigger -->
-            <section class="page-section flush--top" id="section--dialogs">
+            <section class="page-section reset--padding--top" id="section--dialogs">
                 <div class="container--small">
-                    <h5 class="reset">Dialogs and Modals</h5>
+                    <h5 class="reset--margin">Dialogs and Modals</h5>
                     <p>Rapidly create confirmation modals, in-context forms, and more with Bond's dialog component.</p>
                     <a href="#" class="dialog__trigger button--basic" data-dialog="dialog-1">Open Dialog</a>
                 </div>
             </section>
 
             <!-- Photo Gallery -->
-            <section class="page-section flush--top" id="section--galleries">
+            <section class="page-section reset--padding--top" id="section--galleries">
                 <div class="container--small">
-                    <h5 class="reset">Photo Galleries</h5>
+                    <h5 class="reset--margin">Photo Galleries</h5>
                     <p>Custom photo galleries are easy to implement with Bond. Clicking a thumbnail opens a pre-styled, full-screen gallery that supports multiple photo sizes and orientations with Slick carousel.</p>
                 </div>
                 <div class="container--xl">
@@ -1186,9 +1186,9 @@
             </section>
 
             <!-- Filters -->
-            <section class="page-section flush--top" id="section--filters">
+            <section class="page-section reset--padding--top" id="section--filters">
                 <div class="container--medium">
-                    <h4 class="filters__title reset--bottom">Filters</h4>
+                    <h4 class="filters__title reset--margin--bottom">Filters</h4>
                     <p class="filters__content">The filters component utilizes Select2 for searchability and multi-select features.</p>
                     <form class="filters__form">
                         <ul class="filters--3-up">
@@ -1388,7 +1388,7 @@
                 </svg>
             </a>
             <!-- Content -->
-            <h3 class="reset--top">Dialog Box</h3>
+            <h3 class="reset--margin--top">Dialog Box</h3>
             <p>Bond's dialog boxes are set to a maximum height which overflows gracefully when exceeded. This means that the contents of the dialog box can be anything from forms, paragraphs, images, video and more.</p>
             <p>In addition, the dialog can easily be closed in a variety of ways including clicking the close button in the top-right corner, clicking the overlay outside of the dialog, or by pressing the Esc key.</p>
         </div>
