fixing hero video layering issue

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <ul class="sidebar-nav tab-bar--4-up">
             <li class="sidebar-nav__item--logo">
                 <a href="/" class="sidebar-nav__item-link">
-                    <img data-src="https://bond.codeandmortar.com/assets/bond-logo.svg" alt="Logo">
+                    <img src="https://bond.codeandmortar.com/assets/bond-logo.svg" alt="Logo">
                 </a>
             </li>
             <li class="sidebar-nav__item in-tab-bar">
@@ -435,7 +435,7 @@
                 <div class="main-header__container flex--justify-between flex--align-middle">
                     <!-- Logo -->
                     <a href="/" class="main-header__logo-link">
-                        <img data-src="https://bond.codeandmortar.com/assets/bond-logo.svg" class="main-header__logo" alt="Site Logo">
+                        <img src="https://bond.codeandmortar.com/assets/bond-logo.svg" class="main-header__logo" alt="Site Logo">
                     </a>
                     <!-- Language Toggle (Basic) -->
                     <ul class="language-toggle--basic">
@@ -500,7 +500,7 @@
                     </div>
                 </div>
                 <!-- Slide: With Video -->
-                <div class="hero__slide bg-size--cover bg-pos--center" style="background-image:url('https://picsum.photos/1920/1080?image=430')">
+                <div class="hero__slide bg-size--cover bg-pos--center">
                     <div class="hero__slide-content-container container--small">
                         <h5 class="hero__slide-subtitle">Slide One</h5>
                         <h1 class="hero__slide-title">Slide with Video</h1>
