--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
     </head>
 
     <body class="has-sidebar-nav">
+        <!--[if lt IE 10]>
             <p class="dated-browser-note">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-
+        <![endif]-->
 
         <!-- Core Icons Include -->
         <div class="core-icons" style="display:none;"></div>
