--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <link rel="preconnect" href="//use.typekit.net" crossorigin>
 
         <!-- Fonts: 2. Asset Requests (Preload) -->
-        <link rel="preload" as="style" onload="this.rel='stylesheet'" onerror="this.rel='stylesheet'" href="//fonts.googleapis.com/css?family=Roboto:400,400i,700i,900|Do+Hyeon">
-        <link rel="preload" as="style" onload="this.rel='stylesheet'" onerror="this.rel='stylesheet'" href="//use.typekit.net/urw6fuc.css">
+        <link rel="preload" as="style" onerror="this.rel='stylesheet'" onload="this.rel='stylesheet'" href="//fonts.googleapis.com/css?family=Roboto:400,400i,700i,900|Do+Hyeon">
+        <link rel="preload" as="style" onerror="this.rel='stylesheet'" onload="this.rel='stylesheet'" href="//use.typekit.net/urw6fuc.css">
 
         <!-- ### Vendor Dependencies ### -->
         <!--
@@ -33,21 +33,21 @@
         -->
 
         <!-- Vendor CSS: Normalize -->
-        <link rel="preload" as="style" onload="this.rel='stylesheet'" onerror="this.rel='stylesheet'" href="assets/vendor/normalize.css">
+        <link rel="preload" as="style" onerror="this.rel='stylesheet'" onload="this.rel='stylesheet'" href="assets/vendor/normalize.css">
 
         <!-- Vendor CSS: Slick -->
-        <link rel="preload" as="style" onload="this.rel='stylesheet'" onerror="this.rel='stylesheet'" href="assets/vendor/slick.css">
+        <link rel="preload" as="style" onerror="this.rel='stylesheet'" onload="this.rel='stylesheet'" href="assets/vendor/slick.css">
 
         <!-- Vendor CSS: Pikaday -->
-        <link rel="preload" as="style" onload="this.rel='stylesheet'" onerror="this.rel='stylesheet'" href="assets/vendor/pikaday.css">
+        <link rel="preload" as="style" onerror="this.rel='stylesheet'" onload="this.rel='stylesheet'" href="assets/vendor/pikaday.css">
 
         <!-- Vendor CSS: Select2 -->
-        <link rel="preload" as="style" onload="this.rel='stylesheet'" onerror="this.rel='stylesheet'" href="assets/vendor/select2.min.css">
+        <link rel="preload" as="style" onerror="this.rel='stylesheet'" onload="this.rel='stylesheet'" href="assets/vendor/select2.min.css">
 
         <!-- ### Primary CSS ### -->
-        <link rel="preload" as="style" onload="this.rel='stylesheet'" onerror="this.rel='stylesheet'" href="assets/css/style.css">
+        <link rel="preload" as="style" onerror="this.rel='stylesheet'" onload="this.rel='stylesheet'" href="assets/css/style.css">
 
-        <noscript>
+
             <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,400i,700i,900|Do+Hyeon">
             <link rel="stylesheet" href="//use.typekit.net/urw6fuc.css">
             <link rel="stylesheet" href="assets/vendor/normalize.css">
@@ -55,7 +55,7 @@
             <link rel="stylesheet" href="assets/vendor/pikaday.css">
             <link rel="stylesheet" href="assets/vendor/select2.min.css">
             <link rel="stylesheet" href="assets/css/style.css">
-        </noscript>
+        
 
         <!-- All JS and CSS files should be concatenated into one file per type to reduce HTTP requests. -->
 
