firefox preload testing

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!-- ### Primary CSS ### -->
         <link rel="preload" as="style" onerror="this.rel='stylesheet'" onload="this.rel='stylesheet'" href="assets/css/style.css">
 
-
+        <noscript>
             <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,400i,700i,900|Do+Hyeon">
             <link rel="stylesheet" href="//use.typekit.net/urw6fuc.css">
             <link rel="stylesheet" href="assets/vendor/normalize.css">
@@ -55,7 +55,7 @@
             <link rel="stylesheet" href="assets/vendor/pikaday.css">
             <link rel="stylesheet" href="assets/vendor/select2.min.css">
             <link rel="stylesheet" href="assets/css/style.css">
-        
+        </noscript>
 
         <!-- All JS and CSS files should be concatenated into one file per type to reduce HTTP requests. -->
 
