removing pikaday, adding hc-sticky

--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@
         <!-- Vendor CSS: Slick -->
         <link rel="preload" as="style" onerror="this.rel='stylesheet'" onload="this.rel='stylesheet'" href="assets/vendor/slick.css">
 
-        <!-- Vendor CSS: Pikaday -->
-        <link rel="preload" as="style" onerror="this.rel='stylesheet'" onload="this.rel='stylesheet'" href="assets/vendor/pikaday.css">
-
         <!-- Vendor CSS: Select2 -->
         <link rel="preload" as="style" onerror="this.rel='stylesheet'" onload="this.rel='stylesheet'" href="assets/vendor/select2.min.css">
 
@@ -51,7 +48,6 @@
         <link rel="stylesheet" href="//use.typekit.net/urw6fuc.css">
         <link rel="stylesheet" href="assets/vendor/normalize.css">
         <link rel="stylesheet" href="assets/vendor/slick.css">
-        <link rel="stylesheet" href="assets/vendor/pikaday.css">
         <link rel="stylesheet" href="assets/vendor/select2.min.css">
         <link rel="stylesheet" href="assets/css/style.css">
 
@@ -367,10 +363,6 @@
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--content" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Content</a>
                     <a href="https://bond.codeandmortar.com/docs/#content" class="demo-nav__item-link--docs" target="_blank">Docs</a>
-                </li>
-                <li class="sidebar-nav__pane-nav-item">
-                    <a href="#section--datepicker" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Datepicker</a>
-                    <a href="https://bond.codeandmortar.com/docs/#datepicker-pikaday" class="demo-nav__item-link--docs" target="_blank">Docs</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#section--dialogs" class="sidebar-nav__pane-nav-item-link demo-nav__item-link">Dialog</a>
@@ -1476,11 +1468,11 @@
         <!-- Vendor JS: Slick -->
         <script async src="assets/vendor/slick.js"></script>
 
-        <!-- Vendor JS: Pikaday -->
-        <script defer src="assets/vendor/pikaday.js"></script>
-
         <!-- Vendor JS: Select2 -->
         <script async src="assets/vendor/select2.min.js"></script>
+
+        <!-- Vendor JS: hc-sticky -->
+        <script async src="assets/vendor/hc-sticky.js"></script>
 
         <!-- Core JS: Base -->
         <script async src="assets/js/core.js"></script>
@@ -1520,9 +1512,6 @@
 
         <!-- Component JS: Modals -->
         <script defer src="assets/js/components/dialog/dialog.js"></script>
-
-        <!-- Component JS: Datepicker (Pikaday) -->
-        <script defer src="assets/js/components/datepicker/datepicker.js"></script>
 
         <!-- Component JS: Gallery -->
         <script defer src="assets/js/components/gallery/gallery.js"></script>
